@@ -102,6 +102,10 @@ guMainFrame::guMainFrame( wxWindow * parent )
 	m_RadioPanel = new guRadioPanel( m_CatNotebook, m_Db, m_PlayerPanel );
 	m_CatNotebook->AddPage( m_RadioPanel, _( "Radio" ), false );
 
+    // PlayList Page
+    m_PlayListPanel = new guPlayListPanel( m_CatNotebook, m_Db, m_PlayerPanel );
+	m_CatNotebook->AddPage( m_PlayListPanel, _( "PlayLists" ), false );
+
     // LastFM Info Panel
 	m_LastFMPanel = new guLastFMPanel( m_CatNotebook, m_Db, m_PlayerPanel );
 	m_CatNotebook->AddPage( m_LastFMPanel, _( "LastFM" ), false );
