@@ -719,6 +719,17 @@ void guPlayerPanel::SetCurrentTrack( const guTrack * Song )
         }
     }
 
+    // Update the play count if it has player at least the half of the track
+    if( m_MediaSong.m_SongId > 0 )  // If its a song from the library
+    {
+        if( ( m_MediaSong.m_PlayTime > guAS_MIN_PLAYTIME ) || // If have played more than the min amount of time
+            ( m_MediaSong.m_PlayTime >= ( m_MediaSong.m_Length / 2 ) ) )  // If have played at least the half
+        {
+            m_Db->SetTrackPlayCount( m_MediaSong.m_SongId, m_MediaSong.m_PlayCount + 1 );
+        }
+    }
+
+
     // Set the Current Song
     m_MediaSong = * Song;
 
